# mem

./: .clang-format  .clang-tidy  .gitignore  .gn  1.md  AGENTS.md  BUILD.gn  CLAUDE.md  CMakeLists.txt  README.md  README.zh-CN.md  a.out  analyze_code.py  check.md  check_header_naming_strict.py  check_headers_naming_v2.py  check_naming.py  dfx_plan.md  memrpc.gni  plan.md  ppt.md  prompt.md  refactor_guide.md
demo/: BUILD.gn  CMakeLists.txt  demo_dual_process_main.cpp  minirpc_demo_main.cpp
demo/vpsdemo/: CMakeLists.txt  problem1.md
demo/vpsdemo/include/: registry_backend.h  registry_client.h  registry_protocol.h  registry_server.h  rpc_handler_registrar.h  testkit_async_client.h  testkit_client.h  testkit_codec.h  testkit_failure_monitor.h  testkit_protocol.h  testkit_service.h  testkit_types.h  ves_bootstrap_interface.h  ves_bootstrap_proxy.h  ves_bootstrap_stub.h  ves_client.h  ves_codec.h  ves_engine_service.h  ves_protocol.h  ves_session_service.h  ves_types.h  vesdemo_sample_rules.h  virus_executor_service.h  vps_bootstrap_interface.h  vps_bootstrap_proxy.h  vps_bootstrap_stub.h  vps_client.h  vps_session_service.h  vpsdemo_codec.h  vpsdemo_protocol.h  vpsdemo_sample_rules.h  vpsdemo_service.h  vpsdemo_types.h
demo/vpsdemo/perf_baselines/: minirpc_throughput.baseline  testkit_throughput.baseline
demo/vpsdemo/src/: registry_backend.cpp  registry_client.cpp  registry_protocol.cpp  registry_server.cpp  scm_rights.cpp  testkit_async_client.cpp  testkit_client.cpp  testkit_service.cpp  ves_bootstrap_proxy.cpp  ves_client.cpp  ves_engine_service.cpp  ves_session_service.cpp  vesdemo_client.cpp  vesdemo_dt_crash_recovery.cpp  vesdemo_engine_sa.cpp  vesdemo_sample_rules.cpp  vesdemo_stress_client.cpp  vesdemo_supervisor.cpp  virus_executor_service.cpp  vps_bootstrap_proxy.cpp  vps_bootstrap_stub.cpp  vps_client.cpp  vps_session_service.cpp  vpsdemo_client.cpp  vpsdemo_dt_crash_recovery.cpp  vpsdemo_engine_sa.cpp  vpsdemo_sample_rules.cpp  vpsdemo_service.cpp  vpsdemo_stress_client.cpp  vpsdemo_supervisor.cpp
demo/vpsdemo/tests/: testkit_async_pipeline_test.cpp  testkit_backpressure_test.cpp  testkit_baseline_test.cpp  testkit_client_test.cpp  testkit_codec_test.cpp  testkit_dfx_test.cpp  testkit_dt_perf_test.cpp  testkit_dt_stability_test.cpp  testkit_headers_test.cpp  testkit_latency_test.cpp  testkit_resilient_invoker.cpp  testkit_service_test.cpp  testkit_stress_config_test.cpp  testkit_stress_runner.cpp  testkit_throughput_test.cpp  ves_heartbeat_test.cpp  ves_session_service_test.cpp  vesdemo_codec_test.cpp  vesdemo_crash_recovery_test.cpp  vesdemo_health_test.cpp  vesdemo_policy_test.cpp  vesdemo_sample_rules_test.cpp  vps_heartbeat_test.cpp  vps_session_service_test.cpp  vpsdemo_codec_test.cpp  vpsdemo_crash_recovery_test.cpp  vpsdemo_health_test.cpp  vpsdemo_policy_test.cpp  vpsdemo_sample_rules_test.cpp
gn/: BUILDCONFIG.gn
gn/config/: BUILD.gn  compiler.gni  test.gni
gn/toolchain/: BUILD.gn
memrpc/: BUILD.gn  CMakeLists.txt
memrpc/src/: CMakeLists.txt
memrpc/src/bootstrap/: dev_bootstrap.cpp  dev_session_host.cpp  posix_demo_bootstrap.cpp  sa_bootstrap.cpp  shared_memory_session_host.cpp
memrpc/src/client/: replay_classifier.h  rpc_client.cpp
memrpc/tests/: BUILD.gn  CMakeLists.txt  api_headers_test.cpp  bootstrap_health_check_test.cpp  build_config_test.cpp  byte_codec_test.cpp  dt_perf_test.cpp  dt_stability_test.cpp  engine_death_handler_test.cpp  framework_split_headers_test.cpp  log_test.cpp  protocol_layout_test.cpp  replay_classifier_test.cpp  rpc_client_api_test.cpp  rpc_client_crash_recovery_test.cpp  rpc_client_external_recovery_test.cpp  rpc_client_idle_callback_test.cpp  rpc_client_recovery_policy_test.cpp  rpc_client_shutdown_race_test.cpp  rpc_client_timeout_watchdog_test.cpp  rpc_eventfd_fault_injection_test.cpp  rpc_payload_limits_test.cpp  rpc_server_api_test.cpp  rpc_server_executor_test.cpp  sa_bootstrap_stub_test.cpp  session_test.cpp  slot_pool_test.cpp  smoke_test.cpp  typed_future_test.cpp  types_test.cpp
src/: BUILD.gn  CMakeLists.txt
src/bootstrap/: posix_demo_bootstrap.cpp  sa_bootstrap.cpp
src/client/: engine_client.cpp  replay_classifier.h  rpc_client.cpp
src/core/: byte_reader.cpp  byte_reader.h  byte_writer.cpp  log.cpp  protocol.h  ring_buffer.cpp  ring_buffer.h  session.cpp  session.h  session_test_hook.h  shm_layout.h  slot_pool.cpp  slot_pool.h
src/rpc/: scan_behavior_codec.h  scan_codec.cpp  scan_codec.h
src/server/: engine_server.cpp  rpc_server.cpp
tests/: CMakeLists.txt  api_headers_test.cpp  bootstrap_callback_test.cpp  build_config_test.cpp  integration_end_to_end_test.cpp  minirpc_client_test.cpp  minirpc_codec_test.cpp  protocol_layout_test.cpp  response_queue_event_test.cpp  rpc_client_api_test.cpp  rpc_server_api_test.cpp  sa_bootstrap_stub_test.cpp  scan_codec_test.cpp  session_test.cpp  slot_pool_test.cpp  smoke_test.cpp  types_test.cpp  vps_codec_test.cpp  vps_service_test.cpp
tests/fuzz/: BUILD.gn  CMakeLists.txt  minirpc_codec_fuzz.cpp
tests/memrpc/: BUILD.gn  CMakeLists.txt  api_headers_test.cpp  bootstrap_callback_test.cpp  build_config_test.cpp  byte_codec_test.cpp  dt_perf_test.cpp  dt_stability_test.cpp  engine_death_handler_test.cpp  framework_split_headers_test.cpp  protocol_layout_test.cpp  replay_classifier_test.cpp  response_queue_event_test.cpp  ring_buffer_test.cpp  rpc_client_api_test.cpp  rpc_client_idle_callback_test.cpp  rpc_client_integration_test.cpp  rpc_client_recovery_policy_test.cpp  rpc_client_timeout_watchdog_test.cpp  rpc_server_api_test.cpp  rpc_server_executor_test.cpp  sa_bootstrap_stub_test.cpp  session_test.cpp  slot_pool_test.cpp  smoke_test.cpp  typed_future_test.cpp  types_test.cpp
virus_executor_service/: BUILD.gn  CMakeLists.txt  problem1.md
virus_executor_service/perf_baselines/: testkit_dt_perf.baseline  testkit_throughput.baseline
vpsdemo/: CMakeLists.txt  problem1.md
vpsdemo/perf_baselines/: memrpc_dt_perf.baseline
vpsdemo/tests/: testkit_baseline_test.cpp  testkit_codec_test.cpp  testkit_stress_runner.cpp  ves_heartbeat_test.cpp
(+433 files in other folders)
