import("memrpc.gni")

config("memrpc_config") {
  include_dirs = [
    "include",
    "memrpc/include",
    "memrpc/src",
  ]
  cflags_cc = [ "-std=c++17" ]
}

config("memrpc_test_config") {
  include_dirs = [
    "include",
    "memrpc/include",
    "memrpc/src",
  ]
  cflags_cc = [ "-std=c++17" ]
}

group("memrpc_libs") {
  deps = [ "//memrpc/src:memrpc" ]
}

if (memrpc_enable_tests) {
  group("memrpc_tests") {
    testonly = true
    deps = [ "//memrpc/tests:memrpc_tests" ]
  }
}

group("all") {
  testonly = memrpc_enable_tests || memrpc_enable_fuzz
  deps = [ ":memrpc_libs" ]
  if (memrpc_enable_tests) {
    deps += [ ":memrpc_tests" ]
  }
}
