group("default") {
  testonly = true
  deps = [
    "//memrpc:all",
    "//virus_executor_service:all",
  ]
}

group("tests") {
  testonly = true
  deps = []
  if (memrpc_enable_tests) {
    deps += [
      "//memrpc:tests",
      "//virus_executor_service:tests",
    ]
  }
}

group("fuzz") {
  testonly = true
  deps = []
  if (memrpc_enable_fuzz) {
    deps += [ "//virus_executor_service:fuzz" ]
  }
}
