source_set("memrpc") {
  sources = [
    "bootstrap/posix_demo_bootstrap.cpp",
    "bootstrap/sa_bootstrap.cpp",
    "client/rpc_client.cpp",
    "core/byte_reader.cpp",
    "core/byte_writer.cpp",
    "core/log.cpp",
    "core/session.cpp",
    "core/slot_pool.cpp",
    "server/rpc_server.cpp",
  ]
  public_configs = [ "//:memrpc_config" ]
}
