function(memrpc_add_test target source)
  add_executable(${target} ${source})
  target_link_libraries(${target} PRIVATE memrpc GTest::gtest_main)
  add_test(NAME ${target} COMMAND ${target})
endfunction()

memrpc_add_test(memrpc_smoke_test smoke_test.cpp)
memrpc_add_test(memrpc_types_test types_test.cpp)
memrpc_add_test(memrpc_api_headers_test api_headers_test.cpp)
memrpc_add_test(memrpc_protocol_layout_test protocol_layout_test.cpp)
memrpc_add_test(memrpc_ring_buffer_test ring_buffer_test.cpp)
memrpc_add_test(memrpc_slot_pool_test slot_pool_test.cpp)
memrpc_add_test(memrpc_session_test session_test.cpp)
memrpc_add_test(memrpc_build_config_test build_config_test.cpp)
memrpc_add_test(memrpc_bootstrap_callback_test bootstrap_callback_test.cpp)
memrpc_add_test(memrpc_integration_end_to_end_test integration_end_to_end_test.cpp)
memrpc_add_test(memrpc_sa_bootstrap_stub_test sa_bootstrap_stub_test.cpp)
